...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_what_the_heck"
                android:textSize="25dp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/textview_date"
                app:layout_constraintEnd_toStartOf="@+id/edittext_what_the_heck"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edittext_what_the_heck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="120dp"
                android:textSize="25dp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/edittext_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textview_what_the_heck"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/textview_date"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_place"
                android:textSize="25dp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/textview_amount"
                app:layout_constraintEnd_toStartOf="@+id/edittext_place"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_date" />

            <EditText
                android:id="@+id/edittext_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="120dp"
                android:textSize="25dp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/edittext_amount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textview_place"
                app:layout_constraintTop_toBottomOf="@+id/edittext_date"/>

            <TextView
                android:id="@+id/textview_amount"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="200dp"
                android:minHeight="30dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/light_blue"
                app:layout_constraintBottom_toTopOf="@+id/button_take_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textview_categories"
                app:layout_constraintTop_toBottomOf="@+id/togglebutton_type"/>

            <TextView
                android:id="@+id/textview_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_image"
                android:textSize="25dp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/textview_comments"
                app:layout_constraintEnd_toStartOf="@+id/button_view_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_categories" />

            <Button
                android:id="@+id/button_view_image"
                android:layout_width="wrap_content"
...
                android:id="@+id/textview_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_comments"
                android:textSize="25dp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/button_edit_transaction"
                app:layout_constraintEnd_toStartOf="@+id/edittext_comments"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_image" />

            <EditText
                android:id="@+id/edittext_comments"
...
