<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.spenditure.presentation.transaction.ViewTransactionsActivity">

    <LinearLayout
        android:id="@+id/linearlayout_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/nav_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_title_bar_height">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="0dp"

                android:src="@drawable/background_top"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/app_title"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2"
                app:layout_constraintVertical_bias="0.0" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/imageView2">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_view_transactions"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_size"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linearlayout_controls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/scrollview_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatToggleButton
                android:id="@+id/togglebutton_transaction_date_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:backgroundTint="@color/light_blue"
                android:checked="true"
                android:textColor="@color/white"
                android:textOff="Oldest First"
                android:textOn="Newest First" />

            <Button
                android:id="@+id/button_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:backgroundTint="@color/light_blue"
                android:enabled="false"
                android:onClick="editTransactionClicked"
                android:text="@string/label_edit"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:backgroundTint="@color/light_blue"
                android:enabled="false"
                android:onClick="deleteTransactionClicked"
                android:text="@string/label_delete"
                android:textColor="@color/white" />

        </LinearLayout>

        <ListView
            android:id="@+id/listview_transactions"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="100dp"
            android:choiceMode="singleChoice"
            android:listSelector="@color/dark_blue"
            android:text="@string/title_view_transactions"
            android:textSize="40dp" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/nav_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>